some name refactoring; added Event and minimal definition for Widget

--- a/cocos2d-hs.cabal
+++ b/cocos2d-hs.cabal
@@ -23,6 +23,8 @@ executable generator
                      , Graphics.UI.Cocos2d.Generator.Interface.Node
                      , Graphics.UI.Cocos2d.Generator.Interface.Scene
                      , Graphics.UI.Cocos2d.Generator.Interface.Sprite
+                     , Graphics.UI.Cocos2d.Generator.Interface.Widget
+                     , Graphics.UI.Cocos2d.Generator.Interface.Event
   build-depends:       base >=4.7 && <4.9
                      , haskell-src >=1.0 && <1.1
                      , hoppy-generator
@@ -43,6 +45,8 @@ library
                      , Graphics.UI.Cocos2d.Director
                      , Graphics.UI.Cocos2d.Scene
                      , Graphics.UI.Cocos2d.Sprite
+                     , Graphics.UI.Cocos2d.Widget
+                     , Graphics.UI.Cocos2d.Event
   other-modules:       Graphics.UI.Cocos2d.Std
   c-sources:           cbits/Common.cpp
                        cbits/Texture.cpp
@@ -51,6 +55,8 @@ library
                        cbits/Director.cpp
                        cbits/Scene.cpp
                        cbits/Sprite.cpp
+                       cbits/Widget.cpp
+                       cbits/Event.cpp
                        cbits/std.cpp
   include-dirs:        cbits
                        /Applications/Cocos/frameworks/cocos2d-x-3.9/cocos
