--- a/cocos2d-hs.cabal
+++ b/cocos2d-hs.cabal
@@ -87,6 +87,7 @@ library
   extra-lib-dirs:      /Applications/Cocos/frameworks/cocos2d-x-3.9/prebuilt/mac/
   extra-libraries:     "cocos2d Mac" stdc++
   cc-options:          -std=c++11 -stdlib=libc++
+  ghc-options:         -Wall -fno-warn-orphans -fno-warn-name-shadowing
   default-language:    Haskell2010
 
 test-suite cocos2d-hs-test
