generator -- conform to new gettable api in hoppy; reflex -- added widget and its event binding

--- a/cocos2d-hs.cabal
+++ b/cocos2d-hs.cabal
@@ -70,6 +70,7 @@ library
                      , Reflex.Cocos2d.Attributes
                      , Reflex.Cocos2d.Node
                      , Reflex.Cocos2d.Event
+                     , Reflex.Cocos2d.Widget
                      , Reflex.Cocos2d.Internal
                      , Reflex.Extra
   other-modules:       Graphics.UI.Cocos2d.Std
