--- a/cocos2d-hs.cabal
+++ b/cocos2d-hs.cabal
@@ -77,6 +77,7 @@ library
                      , Reflex.Cocos2d.CocoStudio
                      , Reflex.Cocos2d.Internal
                      , Reflex.Extra
+                     , Reflex.State
   other-modules:       Graphics.UI.Cocos2d.Std
   c-sources:           cbits/Common.cpp
                        cbits/Texture.cpp
