audio binding on reflex

--- a/cocos2d-hs.cabal
+++ b/cocos2d-hs.cabal
@@ -73,7 +73,9 @@ library
                      , Reflex.Cocos2d.Attributes
                      , Reflex.Cocos2d.Node
                      , Reflex.Cocos2d.Event
+                     , Reflex.Cocos2d.Label
                      , Reflex.Cocos2d.Widget
+                     , Reflex.Cocos2d.Audio
                      , Reflex.Cocos2d.CocoStudio
                      , Reflex.Cocos2d.Internal
                      , Reflex.Extra
