--- a/cocos2d-hs.cabal
+++ b/cocos2d-hs.cabal
@@ -80,6 +80,8 @@ library
                      , Reflex.Cocos2d.Internal
                      , Reflex.Extra
                      , Reflex.State
+                     -- utils
+                     , Control.Monad.Random.Extra
   other-modules:       Graphics.UI.Cocos2d.Std
   c-sources:           cbits/Common.cpp
                        cbits/Texture.cpp
