--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-6.17
+resolver: lts-7.19
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -36,15 +36,13 @@ resolver: lts-6.17
 # non-dependency (i.e. a user package), and its test suites and benchmarks
 # will not be run. This is useful for tweaking upstream packages.
 packages:
-- location:
-    git: git@github.com:khumba/hoppy
-    commit: e99163ebfd7a284a56f4155fcf29fd63ad914901
-  subdirs:
-      - generator
-      - runtime
-      - std
-  extra-dep: true
 - '.'
+- location: ../hoppy/runtime
+  extra-dep: true
+- location: ../hoppy/generator
+  extra-dep: true
+- location: ../hoppy/std
+  extra-dep: true
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps: []
