--- a/cocos2d-hs.cabal
+++ b/cocos2d-hs.cabal
@@ -13,27 +13,27 @@ build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
-executable generator
-  hs-source-dirs:      generator
-  main-is:             Main.hs
-  other-modules:       Graphics.UI.Cocos2d.Generator.Interface.Common
-                     , Graphics.UI.Cocos2d.Generator.Interface.Texture
-                     , Graphics.UI.Cocos2d.Generator.Interface.Director
-                     , Graphics.UI.Cocos2d.Generator.Interface.Layer
-                     , Graphics.UI.Cocos2d.Generator.Interface.Node
-                     , Graphics.UI.Cocos2d.Generator.Interface.Scene
-                     , Graphics.UI.Cocos2d.Generator.Interface.Sprite
-                     , Graphics.UI.Cocos2d.Generator.Interface.Event
-                     , Graphics.UI.Cocos2d.Generator.Interface.Label
-                     , Graphics.UI.Cocos2d.Generator.Interface.Widget
-                     , Graphics.UI.Cocos2d.Generator.Interface.Audio
-                     , Graphics.UI.Cocos2d.Generator.Interface.CocoStudio
-  build-depends:       base >= 4.7 && < 5
-                     , haskell-src >=1.0 && <1.1
-                     , hoppy-generator
-                     , hoppy-std
-  ghc-options:         -Wall
-  default-language:    Haskell2010
+-- executable generator
+--   hs-source-dirs:      generator
+--   main-is:             Main.hs
+--   other-modules:       Graphics.UI.Cocos2d.Generator.Interface.Common
+--                      , Graphics.UI.Cocos2d.Generator.Interface.Texture
+--                      , Graphics.UI.Cocos2d.Generator.Interface.Director
+--                      , Graphics.UI.Cocos2d.Generator.Interface.Layer
+--                      , Graphics.UI.Cocos2d.Generator.Interface.Node
+--                      , Graphics.UI.Cocos2d.Generator.Interface.Scene
+--                      , Graphics.UI.Cocos2d.Generator.Interface.Sprite
+--                      , Graphics.UI.Cocos2d.Generator.Interface.Event
+--                      , Graphics.UI.Cocos2d.Generator.Interface.Label
+--                      , Graphics.UI.Cocos2d.Generator.Interface.Widget
+--                      , Graphics.UI.Cocos2d.Generator.Interface.Audio
+--                      , Graphics.UI.Cocos2d.Generator.Interface.CocoStudio
+--   build-depends:       base >= 4.7 && < 5
+--                      , haskell-src >=1.0 && <1.1
+--                      , hoppy-generator
+--                      , hoppy-std
+--   ghc-options:         -Wall
+--   default-language:    Haskell2010
 
 library
   hs-source-dirs:      src
