--- a/cocos2d-hs.cabal
+++ b/cocos2d-hs.cabal
@@ -74,7 +74,7 @@ library
                        cbits/external
   -- extra-lib-dirs:      /home/lingnan/builds/cocos2d-x/prebuilt/android/armeabi/
   -- extra-libraries:     cocos2dxinternal
-  cc-options:          -std=c++11 -stdlib=libc++
+  cc-options:          -std=c++11
   ghc-options:         -Wall -fno-warn-orphans -fno-warn-name-shadowing
   default-language:    Haskell2010
 
