--- a/cocos2d-hs.cabal
+++ b/cocos2d-hs.cabal
@@ -13,28 +13,38 @@ build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
--- executable generator
---   hs-source-dirs:      generator
---   main-is:             Main.hs
---   other-modules:       Graphics.UI.Cocos2d.Generator.Interface.Common
---                      , Graphics.UI.Cocos2d.Generator.Interface.Texture
---                      , Graphics.UI.Cocos2d.Generator.Interface.Director
---                      , Graphics.UI.Cocos2d.Generator.Interface.Layer
---                      , Graphics.UI.Cocos2d.Generator.Interface.Node
---                      , Graphics.UI.Cocos2d.Generator.Interface.Scene
---                      , Graphics.UI.Cocos2d.Generator.Interface.Sprite
---                      , Graphics.UI.Cocos2d.Generator.Interface.Event
---                      , Graphics.UI.Cocos2d.Generator.Interface.Label
---                      , Graphics.UI.Cocos2d.Generator.Interface.Widget
---                      , Graphics.UI.Cocos2d.Generator.Interface.Audio
---                      , Graphics.UI.Cocos2d.Generator.Interface.CocoStudio
---                      , Graphics.UI.Cocos2d.Generator.Interface.Utils
---   build-depends:       base >= 4.7 && < 5
---                      , haskell-src >=1.0 && <1.1
---                      , hoppy-generator
---                      , hoppy-std
---   ghc-options:         -Wall
---   default-language:    Haskell2010
+flag target-mac
+  description: Build for Mac
+  default: False
+  manual: True
+
+flag target-android
+  description: Build for Android
+  default: False
+  manual: True
+
+executable generator
+  hs-source-dirs:      generator
+  main-is:             Main.hs
+  other-modules:       Graphics.UI.Cocos2d.Generator.Interface.Common
+                     , Graphics.UI.Cocos2d.Generator.Interface.Texture
+                     , Graphics.UI.Cocos2d.Generator.Interface.Director
+                     , Graphics.UI.Cocos2d.Generator.Interface.Layer
+                     , Graphics.UI.Cocos2d.Generator.Interface.Node
+                     , Graphics.UI.Cocos2d.Generator.Interface.Scene
+                     , Graphics.UI.Cocos2d.Generator.Interface.Sprite
+                     , Graphics.UI.Cocos2d.Generator.Interface.Event
+                     , Graphics.UI.Cocos2d.Generator.Interface.Label
+                     , Graphics.UI.Cocos2d.Generator.Interface.Widget
+                     , Graphics.UI.Cocos2d.Generator.Interface.Audio
+                     , Graphics.UI.Cocos2d.Generator.Interface.CocoStudio
+                     , Graphics.UI.Cocos2d.Generator.Interface.Utils
+  build-depends:       base >= 4.7 && < 5
+                     , haskell-src >=1.0 && <1.1
+                     , hoppy-generator
+                     , hoppy-std
+  ghc-options:         -Wall
+  default-language:    Haskell2010
 
 library
   hs-source-dirs:      src
@@ -75,10 +85,10 @@ library
                        cbits/cocos
                        cbits/cocos/editor-support
                        cbits/external
-  -- extra-lib-dirs:      /home/lingnan/builds/cocos2d-x/prebuilt/android/armeabi/
-  -- extra-libraries:     cocos2dxinternal
-  cc-options:          -std=c++11 -D ANDROID=1
-  extra-libraries:     gnustl_static
+  cc-options:          -std=c++11
+  if flag(target-android)
+    cc-options: -D ANDROID=1
+    extra-libraries:     gnustl_static
   ghc-options:         -Wall -fno-warn-orphans -fno-warn-name-shadowing
   default-language:    Haskell2010
 
